src/test/ui/issues/issue-6804.stderr
error: floating-point types cannot be used in patterns
  --> $DIR/issue-6804.rs:11:9
   |
LL |         NAN => {},
   |         ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-6804.rs:19:10
   |
LL |         [NAN, _] => {},
   |          ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-6804.rs:11:9
   |
LL |         NAN => {},
   |         ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-6804.rs:19:10
   |
LL |         [NAN, _] => {},
   |          ^^^

error: aborting due to 4 previous errors

